--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Refresh Due Date App</h1>
+  <h1>Add Customer</h1>
   <form>
     <div>
       <label>Customer ID: <input type="text"/></label>
