reading data from form

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <h1>Add Customer</h1>
-  <form>
+  <form method="POST">
     <div>
-      <label>Customer ID: <input type="text"/></label>
+      <label>Customer ID: <input type="text" name="customer_id"/></label>
     </div>
     <div>
-      <label>Customer Name: <input type="text"/></label>
+      <label>Customer Name: <input type="text" name="customer_name"/></label>
     </div>
     <button>Submit</button>
   </form>
