--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,33 @@
       </div>
     </div>
     <button class="button">Submit</button>
-  </form>    
+  </form>
+  <div class="hero">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+            All Customers
+        </h1>      
+      </div>
+    </div>
+  </div>  
+  <div class="container">
+    <table class="table is-striped">
+      <thead>
+        <tr>
+          <th>Customer Name</th>
+          <th>Customer ID</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for customer in customers %}
+        <tr>
+          <td>{{customer.name}}</td>
+          <td>{{customer.id}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>      
+  </div>
 </body>
 </html>
