customer table display

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>  
   <div class="container">
-    <table class="table is-striped">
+    <table class="table is-striped is-hoverable is-fullwidth">
       <thead>
         <tr>
           <th>Customer Name</th>
