adding customer review page

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,63 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='node_modules/bulma/css/bulma.min.css')}}"></style>
-</head>
-<body>
-  <div class="hero">
-    <div class="hero-body">
-      <div class="container">
-        <h1 class="title">
-            Add Customer
-        </h1>      
-      </div>
+{% include 'header.html' %}
+<div class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+          Add Customer
+      </h1>      
     </div>
   </div>
-  <form class="container" action="/" method="POST">
-    <div class="field">
-      <label class="label">Customer ID:</label>
-      <div class="control">
-          <input class="input" type="text" name="customer_id"/>
-      </div>
+</div>
+<form class="container" action="/" method="POST">
+  <div class="field">
+    <label class="label">Customer ID:</label>
+    <div class="control">
+        <input class="input" type="text" name="customer_id"/>
     </div>
-    <div class="field">
-      <label class="label">Customer Name:</label>
-      <div class="control">
-          <input class="input" type="text" name="customer_name"/>
-      </div>
-    </div>
-    <button class="button">Submit</button>
-  </form>
-  <div class="hero">
-    <div class="hero-body">
-      <div class="container">
-        <h1 class="title">
-            All Customers
-        </h1>      
-      </div>
-    </div>
-  </div>  
-  <div class="container">
-    <table class="table is-striped is-hoverable is-fullwidth">
-      <thead>
-        <tr>
-          <th>Customer Name</th>
-          <th>Customer ID</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for customer in customers %}
-        <tr>
-          <td>{{customer.name}}</td>
-          <td>{{customer.id}}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>      
   </div>
-</body>
-</html>
+  <div class="field">
+    <label class="label">Customer Name:</label>
+    <div class="control">
+        <input class="input" type="text" name="customer_name"/>
+    </div>
+  </div>
+  <button class="button">Submit</button>
+</form>
+<div class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">
+          All Customers
+      </h1>      
+    </div>
+  </div>
+</div>  
+<div class="container">
+  <table class="table is-striped is-hoverable is-fullwidth">
+    <thead>
+      <tr>
+        <th>Customer Name</th>
+        <th>Customer ID</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for customer in customers %}
+      <tr>
+        <td><a href="/customer/{{customer.id}}">{{customer.name}}</a></td>
+        <td><a href="/customer/{{customer.id}}">{{customer.id}}</a></td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>      
+</div>
+{% include 'footer.html' %}
